<resources>
    <string name="app_name">StudyOwl</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_list">To-do List</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_share">Share</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="reset">Reset</string>

    <string name="whats_on_your_mind">Whats on your mind</string>
    <string name="share_note">Share Note</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="no_notes">No Notes!</string>

</resources>
