<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_firstTimer"
            android:icon="@drawable/ic_av_timer_black_24dp"
            android:title="@string/menu_pomodoro" />
        <item
            android:id="@+id/nav_secondTimer"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_list" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
